--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="amarillo"> 
 	   <div class="azul mediano">
-	      <div class="verde bebe"></div>
+       </div>
+       <div class="verde bebe">
        </div>
      </div>      
 </body>
